#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2013-02-19  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999902 released.

        * Another Fix for installation of mozrepl in Makefile.PL.


2013-02-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999901 released.

        * Another Fix for installation of mozrepl in Makefile.PL.


2013-02-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999 released.

        * Another Fix for installation of mozrepl in Makefile.PL.


2013-02-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999998 released.

        * Another Fix for installation of mozrepl in Makefile.PL.


2013-02-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999997 released.

        * Another Fix for installation of mozrepl in Makefile.PL.


2013-02-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999996 released.

        * Added flag file for first pass DB locking.


2013-02-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999995 released.

        * Added $ENV{PERL_LWP_SSL_VERIFY_HOSTNAME}=0 to
          Makefile.PL.


2013-02-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999994 released.

        * Fixed mozrepel install for Cygwin CPAN install.


2013-02-09  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999993 released.

        * Added temporary mozrepel error checking.


2013-02-09  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999992 released.
