@@ -1,11 +1,11 @@
 ---
-abstract: Perl Based Secure Distributed Computing Network Process
+abstract: 'Perl Based Secure Distributed Computing Network Process'
 author:
   - 'Brian M. Kelly <Brian.Kelly@fullautosoftware.net>'
 build_requires:
   ExtUtils::MakeMaker: 6.42
 dynamic_config: 0
-generated_by: 'CPAN::Meta::Converter version 2.112150, CPAN::Meta::Converter version 2.112150'
+generated_by: 'CPAN::Meta::Converter version 2.112621, CPAN::Meta::Converter version 2.112621'
 license: unknown
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -20,7 +20,7 @@ provides:
     version: 0
   Net::FullAuto:
     file: lib/Net/FullAuto.pm
-    version: 0.99999902
+    version: 0.99999903
   Net::FullAuto::FA_Core:
     file: lib/Net/FullAuto/FA_Core.pm
     version: 0
@@ -86,4 +86,4 @@ requires:
   perl: 5.006
 resources:
   license: http://opensource.org/licenses/gpl-3.0.html
-version: 0.99999902
+version: 0.99999903
