@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 8b464ed635776081b55b009b9756b412884e5e99 ChangeLog
+SHA1 af1a23dbaa0985f92356a3cce9cafc0f7fe0f337 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 18dafd0eba794475b75f635069a5d4ee53e4a1fd META.yml
-SHA1 619fae0080dd5c89b7662d50b58908b5f73e95e9 MYMETA.json
-SHA1 f9ed427891b67b776b20b861d6f18471b32756f6 MYMETA.yml
-SHA1 08d9d6b7fbfc2968a0c9a5627ed7e973c2ab2421 Makefile.PL
+SHA1 0e158e8a46169373e8d9af22d7baf7e245be3ce0 META.yml
+SHA1 173c66c53f700a2c55272b999e22fdd150623472 MYMETA.json
+SHA1 aa54e25d7b727c85c1d112db9d880a3c8050ed4b MYMETA.yml
+SHA1 ec0724608404bb488e62e42df85080a51c8282ad Makefile.PL
 SHA1 38228eb2b6a24938b795a73e324f9f51a2a13756 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 6671adf9bf15b05200f2eb0ce2ac8b257a9e6050 bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
-SHA1 44b445909adf6dae6d4b9cf59c0ac2993267a359 lib/Net/FullAuto.pm
+SHA1 27a68e06a30dd8857b43c0753612f27f28c0c15f lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -54,9 +54,13 @@ SHA1 f77e0177291aa9c60fba7fe75504b685aed00a21 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.12 (Cygwin)
+Version: GnuPG v1.4.13 (Cygwin)
 
-iEYEARECAAYFAlEjy7MACgkQJM3IZYB6aOox8wCeKQPBIZZBNPPrtUHu5g1LKJDJ
-iV4AoKIhBZFk/WA8+t6Ab+/wo6msYQS2
-=hx5k
+iQEcBAEBAgAGBQJRSJAXAAoJEN01jFj4YyZEykcIAIumoF+NDZ8442QBSEwPgvD3
+ZVYf8mataVvtOKtqlJ+3dwF/rdLXAUHaZdWG7P6XMfyxo4YtgGXdXGoVwgqN884X
+XtALAffp0LyIqU0lFWrVTLb4QQbPSs9BivGra8A6vCkE9JnfHNNVc3LNFQSXVp+o
+/tTsFvUvgUy+QaPCbRrdCN8HfJHFWwEkPbLbrOq+gc9jT43bpGt8yVJE8tdqP9Kl
+6xvrXKj0oLLVhdCZjTBDifAJPyF5oovprfaSsgrtXNQbSTE9T14UbHCATuGlhAmU
+5tUBrIl2eZdARbsyzL02GLicnHlq8sOmWsb8mhB1yHIhpoNauEwXg6/X5/DKUTc=
+=gO4O
 -----END PGP SIGNATURE-----
