@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.99999902';
+our $VERSION='0.99999903';
 
 
 use 5.005;
